# bibliometrics-entity-matching

./: .gitignore  CITATION.cff  DATA_AVAILABILITY.md  LICENSE  PUBLIC_RELEASE_MANIFEST.md  README.md  pyproject.toml  requirements.txt
configs/: example_run_config.yaml  normalisation_rules.yaml  schema_headers.txt
configs/prompts/: ain_verifier_v1.txt  and_verifier_v1.txt
docs/: REPRODUCIBILITY.md
scripts/: run_smoke.ps1
src/bem/: __init__.py  __main__.py  run.py
src/bem/adjudication/: queue.py
src/bem/aggregate/: cluster.py  union_find.py
src/bem/analysis/: autofill_auto_gold_label.py  dev_diagnostics.py
src/bem/artefacts/: manifests.py
src/bem/benchmark/: apply_min_labels_to_dev2.py  auto_label_packets.py  autofill_gold_labels.py  build_annotation_packets.py  convert_labelstudio.py  make_min_annotation_files.py  pack_benchmark_pairs.py  sample_benchmark_tasks.py
src/bem/candidates/: generate.py
src/bem/eval/: __init__.py  __main__.py  config.py  io_check.py  manifest.py
src/bem/guards/: apply_guards.py  tune_thresholds.py
src/bem/ingest/: ingest.py
src/bem/llm_verify/: evidence_cards.py  pair_loader.py  verifier.py
src/bem/normalise/: normalise.py
src/vs2/: __init__.py  __main__.py  run.py
src/vs2/aggregate/: cluster.py
src/vs2/analysis/: autofill_auto_gold_label.py  dev_diagnostics.py
src/vs2/artefacts/: manifests.py
src/vs2/benchmark/: apply_min_labels_to_dev2.py  auto_label_packets.py  autofill_gold_labels.py  build_annotation_packets.py  (+4 more)
tests/: test_auto_label_packets.py  test_config_load.py  test_load_llm_decisions.py
(+51 files in other folders)
